# langpivot

./: .gitignore  LICENSE  README.md  REPORT.md  SECURITY.md  pyproject.toml  results.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
langpivot/: __init__.py  corpus.py  costmodel.py  detect.py  middleware.py  predictor.py  router.py
langpivot/data/: predictor_weights.json
scripts/: probe_keys.py  quality_eval.py  run_study.py
tests/: test_langpivot.py  test_packaging.py
